--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -1,8 +1,13 @@
-name: hello_project
-version: "1.0"
-profile: hello_project
-model-paths: ["models"]
+name: test
+version: '1.0'
+config-version: 2
 
-models:
-  hello_project:
-    +materialized: table
+profile: test
+
+model-paths: ["models"]
+macro-paths: ["macros"]
+target-path: "target"
+
+clean-targets:
+  - "target"
+  - "dbt_packages"
